Yabai control update

--- a/.spacebarrc
+++ b/.spacebarrc
@@ -4,8 +4,8 @@ spacebar -m config position           top
 spacebar -m config height             28
 spacebar -m config text_font          "Noto San KR:Bold:14.0"
 spacebar -m config icon_font          "VictorMono Nerd Font:Semibold:14.0"
-spacebar -m config background_color   0xff1e1f29
-spacebar -m config foreground_color   0xfffdfdfd
+spacebar -m config background_color   0xff1d1f28
+spacebar -m config foreground_color   0xfff0f0f0
 spacebar -m config space_icon_color   0xff18e3c8
 spacebar -m config power_icon_color   0xfff2a272
 spacebar -m config battery_icon_color 0xff22ff8b
@@ -16,6 +16,6 @@ spacebar -m config power_icon_strip    
 spacebar -m config space_icon         
 spacebar -m config clock_icon         
 spacebar -m config dnd_icon           
-spacebar -m config clock_format       "%Y/%m/%d (%a) %R"
+spacebar -m config clock_format       "%m/%d (%a) %R"
 
 echo "spacebar configuration loaded.."
