--- a/.yabairc
+++ b/.yabairc
@@ -44,7 +44,7 @@ yabai -m rule --add label="keka" app="Keka*" manage=off
 yabai -m rule --add label="btt" app="BetterTouchTool" manage=off
 yabai -m rule --add label="spotify to space 1" app="Spotify" space=1
 yabai -m rule --add label="iterm to space 1" app="iTerm2" space=3
-
+yabai -m rule --add label="scrcpy float" app="scrcpy" manage=off
 
 #Signals
 yabai -m signal --add label="popup to float" event=window_created \
@@ -57,5 +57,5 @@ yabai -m signal --add label="external monitor disconnected" event=display_remove
 	action='~/yb_display_disconn.sh'
 
 
-
 echo "yabai configuration loaded.."
+~/.spacebarrc
