--- a/.yabairc
+++ b/.yabairc
@@ -10,7 +10,9 @@ yabai -m config window_shadow                off
 yabai -m config window_opacity               off
 yabai -m config window_opacity_duration      0.0
 yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        0.90
+yabai -m config normal_window_opacity        1.0
+
+#SPACEBAR_HEIGHT=$(spacebar -m config height)
 yabai -m config external_bar                 all:28:0
 yabai -m config window_border                off
 yabai -m config window_border_width          5
@@ -26,25 +28,27 @@ yabai -m config mouse_drop_action            swap
 
 # general space settings
 yabai -m config layout                       bsp
-yabai -m config top_padding                  16
-yabai -m config bottom_padding               16
-yabai -m config left_padding                 16
-yabai -m config right_padding                16
-yabai -m config window_gap                   16
+yabai -m config top_padding                  20
+yabai -m config bottom_padding               20
+yabai -m config left_padding                 20
+yabai -m config right_padding                20
+yabai -m config window_gap                   20
 
 # rules
 yabai -m rule --add label="finder" app="^Finder$" manage=off
 yabai -m rule --add label="system pref" app="^시스템 환경설정$" manage=off
-yabai -m rule --add label="kakaotalk" app="^카카오톡$" manage=off space=4
 yabai -m rule --add label="iina" app="^IINA&" manage=off
-yabai -m rule --add label="wireless diag" app="^무선 진단&" manage=off
-yabai -m rule --add label="karabiner" app="Karabiner*" manage=off
+yabai -m rule --add label="kakaotalk" app="^카카오톡$" manage=off space=4
+yabai -m rule --add label="wireless diag" app="무선 진단" manage=off
 yabai -m rule --add label="firefox pip" app="^Firefox$" title="화면 속 화면" manage=off
+yabai -m rule --add label="karabiner" app="Karabiner*" manage=off
+yabai -m rule --add label="Speedtest" app="Speedtest" manage=off
 yabai -m rule --add label="keka" app="Keka*" manage=off
 yabai -m rule --add label="btt" app="BetterTouchTool" manage=off
 yabai -m rule --add label="spotify to space 1" app="Spotify" space=1
 yabai -m rule --add label="iterm to space 1" app="iTerm2" space=3
 yabai -m rule --add label="scrcpy float" app="scrcpy" manage=off
+yabai -m rule --add label="About Mac" title="이 Mac에 관하여" manage=off
 
 #Signals
 yabai -m signal --add label="popup to float" event=window_created \
@@ -56,6 +60,5 @@ yabai -m signal --add label="external monitor connected" event=display_added \
 yabai -m signal --add label="external monitor disconnected" event=display_removed \
 	action='~/yb_display_disconn.sh'
 
-
 echo "yabai configuration loaded.."
-~/.spacebarrc
+#~/.spacebarrc
