--- a/.spacebarrc
+++ b/.spacebarrc
@@ -9,13 +9,13 @@ spacebar -m config foreground_color   0xfff0f0f0
 spacebar -m config space_icon_color   0xff18e3c8
 spacebar -m config power_icon_color   0xfff2a272
 spacebar -m config battery_icon_color 0xff22ff8b
-spacebar -m config dnd_icon_color     0xffff8037
+spacebar -m config dnd_icon_color     0xfff2a272
 spacebar -m config clock_icon_color   0xfff37f97
 spacebar -m config space_icon_strip       
 spacebar -m config power_icon_strip    
 spacebar -m config space_icon         
 spacebar -m config clock_icon         
-spacebar -m config dnd_icon           
+spacebar -m config dnd_icon           ﮖ
 spacebar -m config clock_format       "%m/%d (%a) %R"
 
 echo "spacebar configuration loaded.."
