--- a/.spacebarrc
+++ b/.spacebarrc
@@ -2,7 +2,7 @@
 
 spacebar -m config position           top
 spacebar -m config height             28
-spacebar -m config text_font          "Noto San KR:Bold:14.0"
+spacebar -m config text_font          "Noto Sans KR:Bold:14.0"
 spacebar -m config icon_font          "VictorMono Nerd Font:Semibold:14.0"
 spacebar -m config background_color   0xff1d1f28
 spacebar -m config foreground_color   0xfff0f0f0
@@ -11,7 +11,15 @@ spacebar -m config power_icon_color   0xfff2a272
 spacebar -m config battery_icon_color 0xff22ff8b
 spacebar -m config dnd_icon_color     0xfff2a272
 spacebar -m config clock_icon_color   0xfff37f97
-spacebar -m config space_icon_strip       
+external=$(yabai -m query --displays | jq '[.[] | .index]' | jq 'length') 
+#external=1
+
+if [ ${external} -eq 2 ]
+then
+	spacebar -m config space_icon_strip    ﮭ    ﭮ  
+else
+	spacebar -m config space_icon_strip     ﮭ   ﭮ  
+fi
 spacebar -m config power_icon_strip    
 spacebar -m config space_icon         
 spacebar -m config clock_icon         
