--- a/spicetify_data/Themes/Lovelaced/color.ini
+++ b/spicetify_data/Themes/Lovelaced/color.ini
@@ -14,5 +14,5 @@ pressing_button_fg                    = fdfdfd
 pressing_button_bg                    = 282a36
 selected_button                       = 5adecd
 miscellaneous_bg                      = 414458
-miscellaneous_hover_bg                = 282a36
+miscellaneous_hover_bg                = 18e3c8
 preserve_1                            = FFFFFF
