--- a/.yabairc
+++ b/.yabairc
@@ -1,4 +1,5 @@
 #!/usr/bin/env sh
+sudo yabai --load-sa
 
 # global settings
 
@@ -9,12 +10,12 @@ yabai -m config window_topmost               off
 yabai -m config window_shadow                off
 yabai -m config window_opacity               off
 yabai -m config active_window_opacity        1.0
-yabai -m config normal_window_opacity        1.0
+yabai -m config normal_window_opacity        0.8
 
 #SPACEBAR_HEIGHT=$(spacebar -m config height)
-yabai -m config external_bar                 all:28:0
+yabai -m config external_bar                 all:30:0
 yabai -m config window_border                off
-yabai -m config window_border_width          5
+yabai -m config window_border_width          20
 yabai -m config active_window_border_color   0xff775759
 yabai -m config normal_window_border_color   0xff555555
 yabai -m config insert_feedback_color        0xffff000000
@@ -37,7 +38,7 @@ yabai -m config window_gap                   20
 yabai -m rule --add label="finder" app="^Finder$" manage=off
 yabai -m rule --add label="system pref" app="^시스템 환경설정$" manage=off
 yabai -m rule --add label="iina" app="^IINA&" manage=off
-yabai -m rule --add label="kakaotalk" app="카카오톡" manage=off space=4
+yabai -m rule --add label="kakaotalk" app="카카오톡" manage=off
 yabai -m rule --add label="wireless diag" app="무선 진단" manage=off
 yabai -m rule --add label="firefox pip" app="^Firefox$" title="화면 속 화면" manage=off
 yabai -m rule --add label="unity hub" app="Unity Hub" manage=off
@@ -45,22 +46,65 @@ yabai -m rule --add label="karabiner" app="Karabiner*" manage=off
 yabai -m rule --add label="Speedtest" app="Speedtest" manage=off
 yabai -m rule --add label="keka" app="Keka*" manage=off
 yabai -m rule --add label="btt" app="BetterTouchTool" manage=off
-yabai -m rule --add label="spotify to space 1" app="Spotify" space=1
-yabai -m rule --add label="iterm to space 1" app="iTerm2" space=3
+yabai -m rule --add label="spotify to space 1" app="Spotify"
+yabai -m rule --add label="iterm to space 1" app="iTerm2"
 yabai -m rule --add label="scrcpy float" app="scrcpy" manage=off
 yabai -m rule --add label="System Info" title="시스템 정보" manage=off
 yabai -m rule --add label="About Mac" title="이 Mac에 관하여" manage=off
 yabai -m rule --add label="Android Emulator" app="Android Emulator*" manage=off
+yabai -m rule --add label="Huion" app="HuionTablet" manage=off
+#yabai -m rule --add label="HelloSwing" app="HelloSwing" manage=off
 
 #Signals
 yabai -m signal --add label="popup to float" event=window_created \
 	action='yabai -m query --windows --window $YABAI_WINDOW_ID | jq -er ".resizable == 0 and .floating == 0" && yabai -m window $YABAI_WINDOW_ID --toggle float'
+#yabai -m signal --add label="popup to float java" event=window_created \
+#	action='yabai -m query --windows --window recent | jq -r ".app" | xargs -I% [ % != "Code" ] || yabai -m window $YABAI_WINDOW_ID --toggle float'
 yabai -m signal --add label="kakaotalk popup" event=window_created app="카카오톡"\
 	action='yabai -m window $YABAI_WINDOW_ID --resize abs:375:660'
 yabai -m signal --add label="external monitor connected" event=display_added \
 	action='~/yb_display_conn.sh'
 yabai -m signal --add label="external monitor disconnected" event=display_removed \
 	action='~/yb_display_disconn.sh'
+yabai -m signal --add label="move to mouse focused space" event=window_created \
+	action='yabai -m window $YABAI_WINDOW_ID --space mouse'
+
+#=============Ubersicht_Signals==================
+# Refresh spaces widget on space change
+yabai -m signal --add event=space_changed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-spaces-jsx\"'"
+# Refresh spaces widget on display focus change
+yabai -m signal --add event=display_changed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-spaces-jsx\"'"
+# Refresh process widget on space change
+yabai -m signal --add event=space_changed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-process-jsx\"'"
+
+# Refresh process widget on when focused application changes
+yabai -m signal --add event=window_focused action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-process-jsx\"'"
+# Refresh spaces widget on when focused application changes
+yabai -m signal --add event=window_focused action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-spaces-jsx\"'"
+
+# Refresh process widget on when focused application changes
+yabai -m signal --add event=application_front_switched action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-process-jsx\"'"
+# Refresh spaces widget on when focused application changes
+yabai -m signal --add event=application_front_switched action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-spaces-jsx\"'"
+
+# Refresh process widget on when an application window is closed
+yabai -m signal --add event=window_destroyed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-process-jsx\"'"
+# Refresh spaces widget on when an application window is closed
+yabai -m signal --add event=window_destroyed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-spaces-jsx\"'"
+
+# Refresh process widget when current window title changes
+yabai -m signal --add event=window_title_changed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-process-jsx\"'"
+
+
+#==========Space_Label===============
+yabai -m space 1 --label Code
+yabai -m space 2 --label Web
+yabai -m space 3 --label Studio
+yabai -m space 4 --label Music
+yabai -m space 5 --label Talk
+yabai -m space 6 --label OBS
+yabai -m space 7 --label Art
+
 
 echo "yabai configuration loaded.."
 #~/.spacebarrc
