--- a/.yabairc
+++ b/.yabairc
@@ -48,7 +48,7 @@ yabai -m space 7 --label Art
 yabai -m rule --add label="finder" app="^Finder$" manage=off
 yabai -m rule --add label="system pref" app="^시스템 환경설정$" manage=off
 yabai -m rule --add label="iina" app="^IINA&" manage=off
-yabai -m rule --add label="kakaotalk" app="카카오톡" manage=off
+yabai -m rule --add label="kakaotalk" app="카카오톡" manage=off space="Talk"
 yabai -m rule --add label="wireless diag" app="무선 진단" manage=off
 yabai -m rule --add label="firefox pip" app="^Firefox$" title="화면 속 화면" manage=off
 yabai -m rule --add label="unity hub" app="Unity Hub" manage=off
@@ -63,7 +63,9 @@ yabai -m rule --add label="System Info" title="시스템 정보" manage=off
 yabai -m rule --add label="About Mac" title="이 Mac에 관하여" manage=off
 yabai -m rule --add label="Android Emulator" app="Android Emulator*" manage=off
 yabai -m rule --add label="Huion" app="HuionTablet" manage=off
-#yabai -m rule --add label="HelloSwing" app="HelloSwing" manage=off
+yabai -m rule --add label="Discord" app="Discord" space="Talk"
+yabai -m rule --add label="Krita" app="Krita" space="Art"
+yabai -m rule --add label="Inkscape" app="Discord" space="Art"
 
 #Signals
 yabai -m signal --add label="popup to float" event=window_created \
