--- a/spicetify_data/Themes/Lovelaced/color.ini
+++ b/spicetify_data/Themes/Lovelaced/color.ini
@@ -15,5 +15,5 @@ pressing_button_bg                    = 282a36
 selected_button                       = 5adecd
 miscellaneous_bg                      = 414458
 miscellaneous_hover_fg                = 18e3c8
-miscellaneous_hover_bg                = 18e3c8
+miscellaneous_hover_bg                = 414458
 preserve_1                            = FFFFFF
